--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,5 +35,12 @@
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
         {% endif %}
+
+        {% if site.reading_list == true %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/reading-list">Reading List</a>
+            </li>
+        {% endif %}
+
     </ul>
 </nav>
